# dioxus-components

./: .gitignore  AGENTS.md  Cargo.toml  README.md  component.json
dioxus-components/: Cargo.toml  build.rs
dioxus-components/src/: lib.rs  styles.rs
dioxus-components/src/components/: mod.rs
dioxus-components/src/components/accordion/: component.rs  style.css
dioxus-components/src/components/alert/: component.rs  style.css
dioxus-components/src/components/alert_dialog/: component.rs  mod.rs  style.css
dioxus-components/src/components/aspect_ratio/: component.rs  style.css
dioxus-components/src/components/avatar/: component.rs  style.css
dioxus-components/src/components/badge/: component.rs  style.css
dioxus-components/src/components/button/: component.rs  style.css
dioxus-components/src/components/calendar/: component.rs  style.css
dioxus-components/src/components/card/: component.rs  style.css
dioxus-components/src/components/checkbox/: component.rs  style.css
dioxus-components/src/components/collapsible/: component.rs  style.css
dioxus-components/src/components/color_input/: component.rs  style.css
dioxus-components/src/components/color_picker/: component.rs  style.css
dioxus-components/src/components/combobox/: component.rs  style.css
dioxus-components/src/components/context_menu/: component.rs  mod.rs  style.css
dioxus-components/src/components/data_table/: component.rs  style.css
dioxus-components/src/components/date_input/: component.rs  style.css
dioxus-components/src/components/date_picker/: component.rs  style.css
dioxus-components/src/components/dialog/: component.rs  mod.rs  style.css
dioxus-components/src/components/drag_and_drop_list/: component.rs  style.css
dioxus-components/src/components/dropdown_menu/: component.rs  mod.rs  style.css
dioxus-components/src/components/file_drop_zone/: component.rs  style.css
dioxus-components/src/components/form/: style.css
dioxus-components/src/components/hover_card/: component.rs  style.css
dioxus-components/src/components/input/: component.rs  style.css
preview/: .stylelintrc.json  Cargo.toml  Dioxus.toml  build.rs
preview/assets/: dioxus-code-themes.css  hero.css  language-select.css  main.css
preview/src/: main.rs  overlay_nesting.rs  theme_customizer.rs
preview/src/components/: mod.rs
primitives/: Cargo.toml
primitives/src/: alert_dialog.rs  aspect_ratio.rs  avatar.rs  checkbox.rs  context_menu.rs  date_picker.rs  dialog.rs  disclosure.rs  drag_and_drop_list.rs  dropdown_menu.rs  floating.rs  focus.rs  hover_card.rs  label.rs  lib.rs  listbox.rs  mask.rs  menu.rs  menubar.rs  navbar.rs  overlay.rs  popover.rs  portal.rs  radio_group.rs  scroll_spy.rs  selectable.rs  selection.rs  slider.rs  split_pane.rs  switch.rs  table_of_contents.rs  tabs.rs  textarea.rs  time_picker.rs  toast.rs  toggle.rs  toolbar.rs  tooltip.rs  virtual_list.rs
primitives/src/combobox/: context.rs  hook.rs  mod.rs
primitives/src/file_drop_zone/: mod.rs
primitives/src/js/: focus-trap.js
primitives/src/schedule/: components.rs  mod.rs  state.rs  tests.rs  types.rs  utils.rs
primitives/src/select/: context.rs
primitives/src/virtual/: mod.rs  types.rs  virtualizer.rs
(+824 files in other folders)
