[package]
name = "preview"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-components = { path = "../dioxus-components" }
dioxus-icons = "0.1.0"
dioxus-primitives.workspace = true
dioxus-i18n = { git = "https://github.com/ealmloff/dioxus-i18n", branch = "bump-dioxus" }
manganis = "0.7.9"
palette = "0.7.6"
unic-langid = { version = "0.9", features = ["macros"] }
strum = { version = "0.27.2", features = ["derive"] }
tracing = { workspace = true }
time = { version = "0.3.44", features = ["std", "macros"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }


[build-dependencies]
dioxus = { workspace = true }
dioxus-code = { version = "0.1.0", default-features = false, features = ["runtime", "lang-css"] }
dioxus-ssr = "0.7.0"
pulldown-cmark = "0.13.0"
quote = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
dioxus-ssr = "0.7.0"

[features]
web = ["dioxus/web", "dioxus-primitives/web"]
desktop = ["dioxus/desktop"]
fullstack = ["dioxus/fullstack"]
server = ["dioxus/server", "dioxus/fullstack"]
native = ["dioxus/native"]
